Complete bussiness logic
